tests/stage3/semantic_array_index_assign_bool.err
type error
line: 5
assignment type mismatch
expected: i32
got: bool
