tests/stage3/semantic_array_index_assign_bool.imp
module app.main

function main() {
    variable xs = [1, 2]
    xs[0] = true
}
